deploy/yamls/highwide-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: highwide
  name: highwide
spec:
  replicas: 2
  selector:
    move2kube.konveyor.io/service: highwide
  strategy:
    resources: {}
  template:
    metadata:
      annotations:
        move2kube.konveyor.io/service.expose: "true"
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: highwide
      name: highwide
    spec:
      containers:
        - image: quay.io/yc25z/highwide:latest
          imagePullPolicy: Always
          name: highwide
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - highwide
        from:
          kind: ImageStreamTag
          name: highwide-latest:latest
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
